# soccer_robots

./: README.md
Arduino/: README.md
Arduino/nodeMCU-working-4-1-2017/: nodeMCU-working-4-1-2017.ino
Arduino/nodeMCU-working-4-1-2017-robot2/: nodeMCU-working-4-1-2017-robot2.ino
Arduino/nodeMCU-working-4-1-2017-robot3/: nodeMCU-working-4-1-2017-robot3.ino
arduino/robot1/: robot1.ino
arduino/robot2/: robot2.ino
arduino/robot3/: robot3.ino
bwi_gridworld/: CMakeLists.txt  README.md
bwi_gridworld/agent/src/: RandomAgent.cpp
bwi_gridworld/experiment/src/: run_sim.cpp
bwi_gridworld/grid/src/: grid.cpp
bwi_gridworld/include/agent/: RandomAgent.h
bwi_gridworld/include/grid/: Agent.h  grid.h
cs309_hw2_eid/: CMakeLists.txt  README.txt  package.xml
cs309_hw2_eid/src/: turtle_graph_traverse_evaluator.cpp  turtle_graph_traverse_hw2.cpp
robot_comm/: CMakeLists.txt
robot_comm/msg/: Motor.msg
robot_comm/src/: RobotMain.cpp  Teleop.cpp
robot_common/: CMakeLists.txt  package.xml  readme.txt
robot_common/include/: ColorLocation.h  ColorPair.h  Config.h  ImageHandler.h  Robot.h  RobotNames.h  config.h  robotNames.h
robot_common/scripts/: control.py
robot_common/src/: Cat.cpp  ColorConfig.cpp  ColorLocation.cpp  ColorPair.cpp  ImageHandler.cpp  Main.cpp  Robot.cpp  Robot.h  RobotMain.cpp  SendCommand.cpp  SendCommand1.cpp  SendCommand2.cpp  SendCommand3.cpp  TaskGoToCoordinates.cpp  TaskGoToCoordinates.h  TaskTurnToTop.cpp  TaskTurnToTop.h  Teleop.cpp  color_config.cpp  udp.cpp  (+2 more)
soccer_robots/: CMakeLists.txt  package.xml
usb_cam/: CMakeLists.txt
(+3 files in other folders)
